--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
       - name: JQ
         run: |
           jq . hacs.json
-          jq . _daemon_config.json
+          jq . _appsettings.json
           jq . .vscode/tasks.json
           jq . .vscode/launch.json
           jq . .devcontainer/devcontainer.json
