--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,12 +4,16 @@
   "postCreateCommand": "dotnet restore",
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash",
-    "terminal.integrated.fontSize": 12,
-    "editor.fontFamily": "Cascadia Code, Fira Code, Consolas, 'Courier New', monospace",
-    "editor.fontLigatures": true
+    "terminal.integrated.fontSize": 10
   },
   "remoteEnv": {
-    "HASS_DISABLE_LOCAL_ASM": "false"
+    "HOMEASSISTANT__TOKEN": "${localEnv:HOMEASSISTANT__TOKEN}",
+    "HOMEASSISTANT__HOST": "${localEnv:HOMEASSISTANT__HOST}",
+    "HOMEASSISTANT__PORT": "${localEnv:HOMEASSISTANT__PORT}",
+    "LOGGING__MINIMUMLEVEL": "${localEnv:LOGGING__MINIMUMLEVEL}",
+    "NETDAEMON__GENERATEENTITIES": "${localEnv:NETDAEMON__GENERATEENTITIES}",
+    "NETDAEMON__SOURCEFOLDER": "${localEnv:NETDAEMON__SOURCEFOLDER}",
+    "NETDAEMON__ADMIN": "${localEnv:NETDAEMON__ADMIN}"
   },
   "extensions": [
     "ms-dotnettools.csharp",
