--- a/tests/daemonapp_test.csproj
+++ b/tests/daemonapp_test.csproj
@@ -6,16 +6,10 @@
     <Nullable>enable</Nullable>
  </PropertyGroup>
 
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="JoySoftware.NetDaemon.App" Version="20.51.0-beta" />
-    <PackageReference Include="JoySoftware.NetDaemon.DaemonRunner" Version="20.51.0-beta" />
-    <PackageReference Include="JoySoftware.NetDaemon.Fakes" Version="20.51.0-beta" />
+ <ItemGroup>
+    <PackageReference Include="JoySoftware.NetDaemon.App" Version="20.51.5-beta" />
+    <PackageReference Include="JoySoftware.NetDaemon.DaemonRunner" Version="20.51.5-beta" />
+    <PackageReference Include="JoySoftware.NetDaemon.Fakes" Version="20.51.5-beta" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.1" />
@@ -29,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\daemonapp.csproj" />
+    <ProjectReference Include="..\daemonapp.csproj" />
   </ItemGroup>
 
 
