add the code-gen tool to devcontaier (#27)
* add the code gen dotnet tool

* Upgrade tool

* fix version of rest to same

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Sample NetDaemon App development",
-  "image": "mcr.microsoft.com/dotnet/sdk:5.0",
+  "dockerFile": "./Dockerfile",
   "postCreateCommand": "dotnet restore *.csproj",
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash",
