Make the focus attribute work in Visual Studio (#33)

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,6 +3,9 @@
     "daemonapp": {
       "commandName": "Project",
       "workingDirectory": "$(SolutionDir)"
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
